<resources>

    <string name="app_name">UWallet</string>
    <string name="Splash.btn.login">Login</string>
    <string name="btn.confirm">Confirm</string>
    <string name="btn.next">Next</string>
    <string name="Login.title">Phone Number</string>
    <string name="SmsVerify.title">SMS Verification</string>
    <string name="SmsVerify.desc1">your message is sent</string>
    <string name="AccessibilityLabels.close">Close</string>
    <string name="PinCode.Set1.title">Setup PinCode</string>
    <string name="PinCode.Set2.title">Confirm Again</string>
    <string name="PinCode.Set1.desc">Your PinCode will be used to log in and confirm the transaction</string>
    <string name="PinCode.placeholder1">%1$d digits PIN</string>
    <string name="PinCode.placeholder2">enter again</string>
    <string name="PinCode.option">PIN option</string>
    <string name="PinCode.next">Confirm</string>
    <string name="PinCode.option1">6 digits PIN</string>
    <string name="PinCode.option2">4 digits PIN</string>
    <string name="SmsVerify.popup.verified">SMS verified</string>
    <string name="RenewWallet.popup.warning1">you may lost all money and data in this wallet</string>
    <string name="RenewWallet.popup.warning2">please confirm again</string>
    <string name="RenewWallet.title">you already have a wallet</string>
    <string name="RenewWallet.retain">retain</string>
    <string name="RenewWallet.renew">renew</string>
    <string name="SmsVerify.popup.failure">SMS failure\\ntry again</string>
    <string name="RenewWallet.balance">balance:</string>
    <string name="Login.PhoneNumber">Mobile Number</string>
    <string name="Login.desc"><![CDATA[By clicking "Next" to agree the use of <a href="agree">agreement</a> and <a href="privacy">privacy</a>.]]></string>
    <string name="SMS.resend"><u>resend SMS passcode</u></string>
    <string name="SMS.unsentInfo">Please enter SMS passcode.</string>
    <string name="Home.title" translatable="false">Wallet</string>
    <string name="Home.tag.friends" translatable="false">Friends</string>
    <string name="Home.tag.dashboard" translatable="false">Dashboard</string>
    <string name="Home.tag.notifications">Notifications</string>
    <string name="SetUsername.title">Enter your name</string>
    <string name="Unlock.title">Unlock</string>
    <string name="Unlock.desc">Please enter your PinCode</string>
    <string name="SMS.Checked.done">SMS passcode verified</string>
    <string name="SMS.enterOTP">Enter SMS Passcode</string>
    <string name="Splash.desc">welcome</string>
    <string name="SMS.Invalid">Invalid Passcode</string>
    <string name="SMS.CountdownTimer">Have not received yet? please wait %1$sS</string>
    <string name="PinCode.mismatched">pincode mismatched</string>
    <string name="Btn.done">Done</string>
    <string name="Balance">Balance</string>
    <string name="Currency.Setting">CurrencySetting</string>
    <string name="Unlock.tokenUnavailable">Token Unavailable</string>
    <string name="Home.changedAvatar">Avatar has been changed</string>
    <string name="Setting">Setting</string>
    <string name="Balance.DefaultCurrency">DefaultCurrency</string>
    <string name="Balance.OtherCurrency">OtherCurrency</string>
    <string name="Currency.CNY">CNY</string>
    <string name="Currency.USD">USD</string>
    <string name="Currency.BTC">BTC</string>
    <string name="Currency.ETH">ETH</string>
    <string name="Exchange">Exchange</string>
    <string name="Save_withdraw">Save/Withdraw</string>
    <string name="Receipt_Pay">Receipt/Pay</string>
    <string name="Historical_Transaction">Historical Transaction</string>
    <string name="Deposit">Deposit</string>
    <string name="Withdraw">Withdraw</string>
    <string name="Transfer">Transfer</string>
    <string name="HistoricalTx.Filter">Filter</string>
    <string name="TxSort.Sort">Sorting</string>
    <string name="TxSort.Date">Date</string>
    <string name="TxSort.CustomDate">Custom Date</string>
    <string name="TxSort.highTolow">Amount(high to low)</string>
    <string name="TxSort.lowTohigh">Amount(low to high)</string>
    <string name="TxSort.Ascending">Date(Ascending)</string>
    <string name="TxSort.Descending">Date(Descending)</string>
    <string name="TxSort.All">All</string>
    <string name="TxSort.Who">Who</string>
    <string name="TxSort.WithinAMonth">within a month</string>
    <string name="TxSort.WithinAWeek">within a Week</string>
    <string name="Tx.Sort.TxAction">Tx Action</string>
    <string name="Currency">Currency</string>
    <string name="Contacts">Contacts</string>
    <string name="Ok">Ok</string>
    <string name="TxDetail.Status">Status</string>
    <string name="TxDetail.Counterparty">Counterparty</string>
    <string name="TxDetail.Amount">Amount</string>
    <string name="TxDetail.Time">Time</string>
    <string name="TxDetail">Tx Detail</string>
    <string name="TxDetail.Success">Success</string>
    <string name="TxDetail.Uncompleted">Uncompleted</string>
    <string name="Setting.Language">Language</string>
    <string name="Setting.ChangePinCode">ChangePinCode</string>
    <string name="Setting.FRQ">FRQ</string>
    <string name="Setting.Rating">Rating</string>
    <string name="Setting.AboutUs">About us</string>
    <string name="Profile.Avatar">Avatar</string>
    <string name="Profile.Name">Name</string>
    <string name="Profile.Phone">PhoneNo</string>
    <string name="Profile.ID" translatable="false">UWallet ID</string>
    <string name="Cancel">Cancel</string>
    <string name="InvalidInput">Invalid input</string>
    <string name="AddContacts">Add Contacts</string>
    <string name="Contact.AddFavorite">Add my favorite</string>
    <string name="Contact.Delete">Delete Contact</string>
    <string name="Exchange.SellOut">Sell Out</string>
    <string name="DepositWithdraw.Message">Message(optional)</string>
    <string name="DepositWithdraw.DepositAmount">Deposit Amount(Max three Million per day)</string>
    <string name="DepositWithdraw.WithdrawAmount">Withdraw Amount(Max three Million per day)</string>
    <string name="BankAccount">Bank Account</string>
    <string name="BankAccount.SwiftCode">Swift Code</string>
    <string name="BankAccount.TransactionFailed">Transaction Failed</string>
    <string name="Transfer.Pay">Pay</string>
    <string name="Transfer.Receipt">Receipt</string>
    <string name="QRCode" translatable="false">QRcode</string>
    <string name="Transfer.Store">Store</string>

</resources>
