<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".presenter.activities.HomeActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dealHistoryBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/ic_deal_history"
        android:onClick="dealHistoryBtnOnClick"
        app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="@+id/dealBtn"
        app:layout_constraintStart_toStartOf="@+id/dealBtn">

        <TextView
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/Historical_Transaction"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/exchangeBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_exchange"
        android:onClick="exchangeBtnOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dealBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Exchange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="93dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:srcCompat="@drawable/icon_user" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/balanceView"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="balanceBtnClick"
        app:layout_constraintEnd_toEndOf="@+id/hline"
        app:layout_constraintStart_toStartOf="@+id/hline"
        app:layout_constraintTop_toBottomOf="@+id/userName">

        <TextView
            android:id="@+id/default_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="人民币余额"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/default_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="000.00"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_keyboard_arrow_right_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/dealBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/ic_deal"
        android:onClick="dealBtnOnClick"
        app:layout_constraintBottom_toBottomOf="@+id/exchangeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/exchangeBtn">

        <TextView
            android:id="@+id/view54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Receipt_Pay"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/saveBtn"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_save"
        android:onClick="saveBtnOnClick"
        app:layout_constraintBottom_toTopOf="@+id/exchangeBtn"
        app:layout_constraintEnd_toEndOf="@+id/exchangeBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exchangeBtn">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Save_withdraw"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <View
        android:id="@+id/hline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/gray_shadow"
        app:layout_constraintBottom_toTopOf="@+id/balanceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.071" />

    <View
        android:id="@+id/hline2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#41484848"
        app:layout_constraintEnd_toEndOf="@+id/hline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hline"
        app:layout_constraintTop_toBottomOf="@+id/balanceView" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/bg_titlebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSetting"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:onClick="settingBtnOnClick"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_setting" />

</android.support.constraint.ConstraintLayout>